fix: align-content start to flex-start

--- a/src/scss-compile/components/_global-header.scss
+++ b/src/scss-compile/components/_global-header.scss
@@ -137,7 +137,7 @@
       bottom: 0;
       padding: v('space-md');
       overflow-y: auto;
-      align-items: start;
+      align-items: flex-start;
     }
 
     .no-scroll {
